работает checkbox checked и модалка

--- a/src/UI/TabComponents/Pagination.module.scss
+++ b/src/UI/TabComponents/Pagination.module.scss
@@ -28,7 +28,7 @@
 		-moz-appearance: none;
 		appearance: none;
 		color: #000;
-		background: url("../../../img/en-sort-down.svg") right center no-repeat;
+		background: url("../../img/en-sort-down.svg") right center no-repeat;
 	}
 	&__pages {
 		display: flex;
@@ -72,11 +72,11 @@
 	&__prev {
 		border-radius: 4px 0px 0px 4px;
 		border: 1px solid #d0d3da;
-		background: #f8f8fa url("../../../img/en-arrow-left.svg") no-repeat center/16px;
+		background: #f8f8fa url("../../img/en-arrow-left.svg") no-repeat center/16px;
 	}
 	&__next {
 		border-radius: 0px 4px 4px 0px;
 		border: 1px solid #d0d3da;
-		background: #f8f8fa url("../../../img/en-arrow-right.svg") no-repeat center/16px;
+		background: #f8f8fa url("../../img/en-arrow-right.svg") no-repeat center/16px;
 	}
 }
