--- a/src/UI/Modal/Modal.module.scss
+++ b/src/UI/Modal/Modal.module.scss
@@ -1,15 +1,29 @@
 .modal {
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	inset: auto auto 0;
+	position: sticky;
+	// inset: 0;
+	bottom: 30px;
 	margin: auto;
-	border-radius: 8px;
-	background: #fff;
-	max-width: 475px;
-	padding: 2em;
-	box-shadow: 0px 0px 1px 0px rgba(76, 93, 112, 0.3), 0px 4px 8px 0px rgba(76, 93, 112, 0.3);
+	width: fit-content;
+	height: 100%;
+	// background-color: rgb(#000, 0.5);
+	// z-index: 1050;
+	display: none;
+	&.active {
+		display: flex;
+		align-items: center;
+		// justify-content: center;
+		justify-content: flex-end;
+		flex-direction: column;
+	}
+
+	&__content {
+		position: relative;
+		padding: 3em 2em;
+		box-shadow: 0px 0px 1px 0px rgba(76, 93, 112, 0.3), 0px 4px 8px 0px rgba(76, 93, 112, 0.3);
+		border-radius: 8px;
+		background-color: #fff;
+		width: 100%;
+	}
 	&__close {
 		position: absolute;
 		inset: 0px 0px auto auto;
