--- a/src/index.css
+++ b/src/index.css
@@ -31,9 +31,7 @@ button {
 
 
 
-
-
-
+/* cities*/
 
 .citites__content {
   margin-top: 16px;
@@ -112,20 +110,4 @@ button {
   height: 40px;
 }
 
-.sales-selection__add-button {
-  width: 100%;
-  height: 40px;
-}
-.sales-selection__button {
-  width: 100%;
-  height: 100%;
-  border-radius: 8px;
-  border: 1px solid #bd68ca;
-  background: #c06ecc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 16px;
-  font-weight: 500;
-  color: #fff;
-}
+
