--- a/src/UI/TabComponents/Table.module.scss
+++ b/src/UI/TabComponents/Table.module.scss
@@ -77,6 +77,7 @@
 	}
 	&__checkbox {
 		display: none;
+		appearance: checkbox;
 		&._active {
 			background-color: rgba(248, 248, 250, 0.8901960784);
 		}
