--- a/src/UI/TabComponents/Table.module.scss
+++ b/src/UI/TabComponents/Table.module.scss
@@ -75,9 +75,15 @@
 		border-bottom: 1px solid #ebecef;
 		background: #f8f8fa;
 	}
+	&__wrapper {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		height: 100%;
+	}
 	&__checkbox {
 		display: none;
-		appearance: checkbox;
 		&._active {
 			background-color: rgba(248, 248, 250, 0.8901960784);
 		}
