--- a/src/components/Aside/Aside.module.scss
+++ b/src/components/Aside/Aside.module.scss
@@ -3,6 +3,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	position: -webkit-sticky;
 	position: sticky;
 	inset: 0 auto;
 	&__list {
