--- a/src/UI/Modal/PopUp.module.scss
+++ b/src/UI/Modal/PopUp.module.scss
@@ -1,16 +1,17 @@
-.modal {
-	position: fixed;
-	inset: 0;
+.popup {
+	position: -webkit-sticky;
+	position: sticky;
+	bottom: 30px;
 	margin: auto;
-	width: 100%;
+	width: -webkit-fit-content;
+	width: -moz-fit-content;
+	width: fit-content;
 	height: 100%;
-	background-color: rgb(#000, 0.5);
-	z-index: 1050;
 	display: none;
 	&.active {
 		display: flex;
-		align-items: flex-start;
-		justify-content: flex-start;
+		align-items: center;
+		justify-content: flex-end;
 		flex-direction: column;
 	}
 
@@ -21,9 +22,6 @@
 		border-radius: 8px;
 		background-color: #fff;
 		width: 100%;
-		max-width: 40vw;
-		margin: 0.5em;
-		overflow-y: auto;
 	}
 	&__close {
 		position: absolute;
