--- a/src/UI/Modal/Modal.module.scss
+++ b/src/UI/Modal/Modal.module.scss
@@ -6,17 +6,14 @@
 	height: 100%;
 	background-color: rgb(#000, 0.5);
 	z-index: 1050;
-	display: none;
-	&.active {
-		display: flex;
-		align-items: flex-start;
-		justify-content: flex-start;
-		flex-direction: column;
-	}
+	display: flex;
+	align-items: flex-start;
+	justify-content: flex-start;
+	flex-direction: column;
 
 	&__content {
 		position: relative;
-		padding: 3em 2em;
+		height: 100%;
 		box-shadow: 0px 0px 1px 0px rgba(76, 93, 112, 0.3), 0px 4px 8px 0px rgba(76, 93, 112, 0.3);
 		border-radius: 8px;
 		background-color: #fff;
@@ -35,6 +32,7 @@
 		align-items: center;
 		justify-content: center;
 		transition: all 0.3s;
+		z-index: 50;
 		&:hover {
 			transition: all 0.3s;
 			opacity: 0.5;
