--- a/src/components/MainContent/Modals/AddSaleModal.module.scss
+++ b/src/components/MainContent/Modals/AddSaleModal.module.scss
@@ -1,16 +1,20 @@
 .sales {
 	position: relative;
+	width: 100%;
 	&__header {
+		padding: 26px 40px;
 	}
 	&__body {
+		padding: 1em 40px;
 	}
 }
 .header-button {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	gap: 20px;
+	gap: 1em;
 	&__item {
 		width: 100%;
+		height: 48px;
 		display: flex;
 		align-items: center;
 		justify-content: center;
@@ -19,15 +23,71 @@
 		border-radius: 4px;
 		border: 1px solid #d0d3da;
 		background: #fff;
+		color: #37393d;
+		transition: all 0.4s;
+		&:hover {
+			transition: all 0.4s;
+			background-color: #c06ecc;
+			color: #fff;
+		}
 	}
 }
 .sales-block {
+	width: 100%;
 	&__list {
+		display: flex;
+		flex-direction: column;
+		gap: 30px;
+		width: 100%;
 	}
 	&__list-item {
+		display: flex;
+		justify-content: flex-start;
+		flex-direction: column;
+		position: relative;
+		&._active {
+			.sales-block__input-wrapper::before {
+				transform: rotate(180deg);
+			}
+		}
+	}
+	&__input-wrapper {
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+		&::before {
+			content: "";
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			right: 20px;
+			height: 30px;
+			width: 30px;
+			margin: auto;
+			cursor: pointer;
+			background: no-repeat 98% center/16px url("../../../img/arrow.svg");
+		}
 	}
 	&__input {
+		border-radius: 8px;
+		border: 1px solid #d0d3da;
+		background: #fff;
+		height: 30px;
+		padding: 10px;
+		padding-right: 30px;
+		font-size: 14px;
+		font-weight: 400;
+		cursor: pointer;
+		&:disabled {
+			color: #37393d;
+		}
 	}
 	&__label {
+		font-size: 14px;
+		font-weight: 500;
+		line-height: 171.428571%; /* 24/14 */
+		color: #37393d;
+		margin-bottom: 4px;
 	}
 }
