--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,15 @@ button {
   background-color: transparent;
   border: none;
   cursor: pointer;
+	width: 100%;
+	height: 100%;
+	box-shadow: none;
+	outline: none;
 }
-
+hr {
+	margin: 0;
+	padding: 0;
+}
 
 
 /* cities*/
