переверстка, настройка роутинга с outlet

--- a/src/UI/TabComponents/Table/Table.module.scss
+++ b/src/UI/TabComponents/Table/Table.module.scss
@@ -14,6 +14,13 @@
 		&:hover {
 			background-color: #f8f8fae3;
 		}
+		@media (max-width: 1485px) {
+			grid-template-columns: 40px 1fr 1fr 1fr 1fr 80px;
+			justify-content: flex-start;
+			&:first-child {
+				grid-row: 40px;
+			}
+		}
 		th {
 			transition: all 0.4s;
 			line-height: 50px;
@@ -128,7 +135,7 @@
 			width: 10px;
 			height: 10px;
 			box-sizing: border-box;
-			background-image: url(../../img/check.svg);
+			background-image: url(../../../img/check.svg);
 			background-size: contain;
 			content: "";
 			position: absolute;
