--- a/src/components/MainContent/_AdminButton/AdminButton.module.scss
+++ b/src/components/MainContent/_AdminButton/AdminButton.module.scss
@@ -3,7 +3,10 @@
 	grid-template-columns: 40px 1fr;
 	max-width: 144px;
 	align-items: center;
+	justify-content: flex-end;
 	gap: 16px;
+	margin-inline: auto 30px;
+	padding: 30px 0;
 	&__email {
 		font-size: 14px;
 		line-height: 142.857143%; /* 20/14 */
@@ -16,4 +19,6 @@
 		width: 40px;
 		height: 40px;
 	}
+}
+.header {
 }
