--- a/src/UI/TableBlock/TableBlock.module.scss
+++ b/src/UI/TableBlock/TableBlock.module.scss
@@ -12,6 +12,10 @@
 		background-color: #fff;
 		z-index: 33;
 		padding: 30px;
+		@media (max-width: 550px) {
+			position: unset;
+			padding: 0;
+		}
 	}
 
 	&__content {
