--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -10,6 +10,7 @@
 .wrapper {
 	margin-bottom: 150px;
 	overflow: hidden;
+	width: 100%;
 }
 .main {
 	display: grid;
@@ -21,6 +22,14 @@
 	}
 }
 .header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 30px 0;
+	&__logout {
+		display: block;
+		width: fit-content;
+	}
 }
 .cursor {
 	display: none;
@@ -29,6 +38,28 @@
 	margin: 20px 0;
 	@media (max-width: 1030px) {
 		display: flex;
+	}
+}
+.mainInner {
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+	height: 100%;
+
+	&__body {
+		border-radius: 24px;
+		background: #fff;
+		box-shadow: -5px 1px 15px 0px rgba(0, 0, 0, 0.05);
+		height: 100%;
+	}
+	&__header {
+		align-self: flex-end;
+	}
+	&__body {
+		padding: 24px;
+	}
+	&__content {
+		height: auto;
 	}
 }
 
