--- a/src/components/Aside/Nav/Nav.module.scss
+++ b/src/components/Aside/Nav/Nav.module.scss
@@ -40,3 +40,9 @@
 	font-size: 16px;
 	font-weight: 500;
 }
+.aside__link-item {
+	@media (max-width: 1030px) {
+		border: 1px solid rgb(#000, 0.5);
+		border-radius: 8px;
+	}
+}
