--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ hr {
   justify-content: flex-end;
 }
 .table-block .delete {
-  background-image: url("img/component.svg");
+  background-image: url("./UI/img/component.svg");
   background-size: 16px;
   background-repeat: no-repeat;
   background-position: center;
@@ -123,3 +123,4 @@ hr {
 }
 
 
+	
