--- a/src/components/MainContent/Public/Login/Login.module.scss
+++ b/src/components/MainContent/Public/Login/Login.module.scss
@@ -39,6 +39,21 @@
 	&__form-item {
 		display: flex;
 		flex-direction: column;
+		&:nth-child(2),
+		&:nth-child(3) {
+			position: relative;
+		}
+	}
+	&__show {
+		position: absolute;
+		width: 30px;
+		height: 30px;
+		background: no-repeat center/16px url("../../../../UI/img/eye.svg");
+		right: 6px;
+		bottom: 6px;
+		margin: auto;
+		cursor: pointer;
+		display: block;
 	}
 	&__label {
 		margin-bottom: 4px;
@@ -86,17 +101,7 @@
 		}
 	}
 	input[type="password"] {
-		position: relative;
 		padding-right: 40px;
-		&::before {
-			content: "";
-			position: absolute;
-			width: 30px;
-			height: 30px;
-			background: no-repeat center/contain url("../../../../UI/img/eye.svg");
-			right: 0;
-			margin: auto;
-		}
 	}
 	&__error {
 		display: flex;
