--- a/src/UI/Modal/ModalMainBlock/ModalMainBlock.module.scss
+++ b/src/UI/Modal/ModalMainBlock/ModalMainBlock.module.scss
@@ -11,16 +11,22 @@
 	justify-content: flex-start;
 	flex-direction: column;
 
+	box-sizing: border-box;
+
 	&__content {
 		position: relative;
 		height: 100%;
-		box-shadow: 0px 0px 1px 0px rgba(76, 93, 112, 0.3), 0px 4px 8px 0px rgba(76, 93, 112, 0.3);
-		border-radius: 8px;
+		box-shadow:
+			0px 0px 1px 0px rgba(76, 93, 112, 0.3),
+			0px 4px 8px 0px rgba(76, 93, 112, 0.3);
+
 		background-color: #fff;
 		width: 100%;
-		max-width: 40vw;
-		margin: 0.5em;
+		max-width: 50vw;
 		overflow-y: auto;
+		@media (max-width: 992px) {
+			max-width: 100%;
+		}
 	}
 	&__close {
 		position: absolute;
