--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -1,11 +1,9 @@
 .container {
-	width: 100%;
-	max-width: 1440px;
+	width: min(100% - 30px, 1440px);
+	max-width: 100%;
 	margin-inline: auto;
-	padding: 0 15px;
 	display: flex;
 	flex-direction: column;
-	box-sizing: border-box;
 }
 .wrapper {
 	margin-bottom: 150px;
@@ -28,6 +26,8 @@
 	padding: 30px 0;
 	&__logout {
 		display: block;
+		width: -webkit-fit-content;
+		width: -moz-fit-content;
 		width: fit-content;
 	}
 }
@@ -75,28 +75,23 @@
 
 @-webkit-keyframes tooltip-horizontal-scroll-icon_anim-scroll-hand {
 	0% {
-		-webkit-transform: translateX(80px) scale(1);
 		transform: translateX(80px) scale(1);
 		opacity: 0;
 	}
 	10% {
-		-webkit-transform: translateX(80px) scale(1);
 		transform: translateX(80px) scale(1);
 		opacity: 1;
 	}
 	20%,
 	60% {
-		-webkit-transform: translateX(175px) scale(0.6);
 		transform: translateX(175px) scale(0.6);
 		opacity: 1;
 	}
 	80% {
-		-webkit-transform: translateX(5px) scale(0.6);
 		transform: translateX(5px) scale(0.6);
 		opacity: 1;
 	}
 	to {
-		-webkit-transform: translateX(5px) scale(0.6);
 		transform: translateX(5px) scale(0.6);
 		opacity: 0;
 	}
@@ -104,28 +99,23 @@
 
 @keyframes tooltip-horizontal-scroll-icon_anim-scroll-hand {
 	0% {
-		-webkit-transform: translateX(80px) scale(1);
 		transform: translateX(80px) scale(1);
 		opacity: 0;
 	}
 	10% {
-		-webkit-transform: translateX(80px) scale(1);
 		transform: translateX(80px) scale(1);
 		opacity: 1;
 	}
 	20%,
 	60% {
-		-webkit-transform: translateX(175px) scale(0.6);
 		transform: translateX(175px) scale(0.6);
 		opacity: 1;
 	}
 	80% {
-		-webkit-transform: translateX(5px) scale(0.6);
 		transform: translateX(5px) scale(0.6);
 		opacity: 1;
 	}
 	to {
-		-webkit-transform: translateX(5px) scale(0.6);
 		transform: translateX(5px) scale(0.6);
 		opacity: 0;
 	}
@@ -133,24 +123,20 @@
 @-webkit-keyframes tooltip-horizontal-scroll-icon_anim-scroll-card {
 	0%,
 	60% {
-		-webkit-transform: translateX(0);
 		transform: translateX(0);
 	}
 	80%,
 	to {
-		-webkit-transform: translateX(-240px);
 		transform: translateX(-240px);
 	}
 }
 @keyframes tooltip-horizontal-scroll-icon_anim-scroll-card {
 	0%,
 	60% {
-		-webkit-transform: translateX(0);
 		transform: translateX(0);
 	}
 	80%,
 	to {
-		-webkit-transform: translateX(-240px);
 		transform: translateX(-240px);
 	}
 }
