--- a/src/components/MainContent/TabPages/TableBlock.module.scss
+++ b/src/components/MainContent/TabPages/TableBlock.module.scss
@@ -1,6 +1,7 @@
 .table-block {
 	position: relative;
 	&__header {
+		border-bottom: 1px solid rgb(#000, 0.2);
 		display: flex;
 		flex-direction: column;
 		gap: 1.5em;
@@ -8,10 +9,10 @@
 		position: sticky;
 		top: 0;
 		left: 0;
-		margin-bottom: 1.5em;
 		background-color: #fff;
 		z-index: 33;
 		padding: 30px;
+		overflow: hidden;
 		@media (max-width: 550px) {
 			position: unset;
 			padding: 0;
