--- a/src/components/MainContent/Modals/PurchaseEditModal/InputContainer/InputContainer.module.scss
+++ b/src/components/MainContent/Modals/PurchaseEditModal/InputContainer/InputContainer.module.scss
@@ -34,3 +34,11 @@
 		}
 	}
 }
+.title {
+	margin-top: 8px;
+	font-size: 14px;
+	font-weight: 500;
+	line-height: 171.428571%;
+	color: #37393d;
+	margin-bottom: 4px;
+}
