--- a/src/components/MainContent/Modals/PurchaseEditModal/components/ImageBlock/ImageBlock.module.scss
+++ b/src/components/MainContent/Modals/PurchaseEditModal/components/ImageBlock/ImageBlock.module.scss
@@ -31,7 +31,7 @@
 	&__picture {
 		background-color: #fafafa;
 		min-height: 80px;
-		background-image: url("../../../../../UI/img/no-image.svg");
+		background-image: url("../../../../../../UI/img/no-image.svg");
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: 26px;
@@ -51,7 +51,7 @@
 		&::before {
 			content: "";
 			position: absolute;
-			background-image: url("../../../../../UI/img/source.svg");
+			background-image: url("../../../../../../UI/img/source.svg");
 			background-repeat: no-repeat;
 			background-position: center;
 			width: 20px;
@@ -80,7 +80,7 @@
 	&__delete {
 		width: 100%;
 		height: 100%;
-		background-image: url("../../../../../UI/img/component.svg");
+		background-image: url("../../../../../../UI/img/component.svg");
 		background-repeat: no-repeat;
 		background-size: 16px;
 		background-position: center;
