--- a/src/components/MainContent/Modals/PurchaseEditModal/components/InputDeleteBlock/InputDelete.module.scss
+++ b/src/components/MainContent/Modals/PurchaseEditModal/components/InputDeleteBlock/InputDelete.module.scss
@@ -12,7 +12,7 @@
 .button-delete {
 	width: 100%;
 	height: 100%;
-	background-image: url("../../../../../UI/img/component.svg");
+	background-image: url("../../../../../../UI/img/component.svg");
 	background-repeat: no-repeat;
 	background-size: 16px;
 	background-position: center;
