--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 *{
 	padding: 0;
 	margin: 0;
+	box-sizing: border-box;
 }
 body {
   font-family: "Inter", sans-serif;
@@ -39,91 +40,23 @@ button {
 	box-shadow: none;
 	outline: none;
 }
+input {
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+}
 hr {
 	margin: 0;
 	padding: 0;
 }
 
-
-/* cities*/
-
-.citites__content {
-  margin-top: 16px;
+.input {
+	border-radius: 8px;
+	border: 1px solid  #D0D3DA;
+	background:  #FFF;
+	padding: 10px;
+	font-size: 14px;
+	&::placeholder {
+		color: #737680;
+	}
 }
-
-.input-block {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  left: 0;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 8px;
-}
-.input-block__input {
-  border-radius: 8px;
-  border: 1px solid rgba(115, 118, 128, 0.2705882353);
-  background: #fff;
-  font-size: 14px;
-  padding: 10px 12px;
-}
-.input-block__button {
-  border-radius: 8px;
-  border: 1px solid #bd68ca;
-  background: #c06ecc;
-  font-size: 16px;
-  font-weight: 500;
-  color: #fff;
-}
-
-.table-block {
-  font-size: 14px;
-  color: #737680;
-  font-weight: 500;
-}
-.table-block__wrapper {
-  width: 100%;
-}
-.table-block td {
-  padding: 10px 8px;
-}
-.table-block__header {
-  background-color: #f8f8fa;
-  border-top: 1px solid #ebecef;
-  border-bottom: 1px solid #ebecef;
-  display: grid;
-  grid-template-columns: 1fr 1fr 80px;
-}
-.table-block__header th {
-  text-align: left;
-  padding: 10px 8px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 30px;
-}
-.table-block__header th:nth-child(2) {
-  grid-column: 2/-1;
-}
-.table-block__table tr {
-  display: grid;
-  grid-template-columns: 1fr 1fr 80px;
-}
-.table-block__item td {
-  line-height: 50px;
-}
-.table-block__recycle {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-.table-block .delete {
-  background-image: url("./UI/img/component.svg");
-  background-size: 16px;
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 40px;
-  height: 40px;
-}
-
-
-	
