--- a/src/components/MainContent/TabPages/LayoutTable.module.scss
+++ b/src/components/MainContent/TabPages/LayoutTable.module.scss
@@ -1,5 +1,6 @@
 .table-block {
 	position: relative;
+	height: 100%;
 	&__header {
 		border-bottom: 1px solid rgb(#000, 0.2);
 		display: flex;
@@ -31,4 +32,17 @@
 			border-radius: 10px;
 		}
 	}
+}
+.errorText {
+	margin: auto;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+}
+
+.usersPage {
+	position: relative;
 }
