--- a/src/components/MainContent/TabPages/Cities/Cities.module.scss
+++ b/src/components/MainContent/TabPages/Cities/Cities.module.scss
@@ -68,7 +68,7 @@
 	justify-content: flex-end;
 }
 .table-block .delete {
-	background-image: url("../../../../UI/img/component.svg");
+	background-image: url("../../../UI/img/component.svg");
 	background-size: 16px;
 	background-repeat: no-repeat;
 	background-position: center;
