--- a/src/components/UI/Form/Input/Input.module.scss
+++ b/src/components/UI/Form/Input/Input.module.scss
@@ -10,7 +10,7 @@
 		position: absolute;
 		width: 30px;
 		height: 30px;
-		background: no-repeat center/16px url("../../../UI/img/eye.svg");
+		background: no-repeat center/16px url("../../img/eye.svg");
 		right: 6px;
 		bottom: 6px;
 		margin: auto;
