--- a/src/components/MainContent/Modals/AddSaleModal/AddSaleModal.module.scss
+++ b/src/components/MainContent/Modals/AddSaleModal/AddSaleModal.module.scss
@@ -69,7 +69,7 @@
 			width: 30px;
 			margin: auto;
 			cursor: pointer;
-			background: no-repeat 98% center/16px url("../../../../UI/img/arrow.svg");
+			background: no-repeat 98% center/16px url("../../../UI/img/arrow.svg");
 		}
 	}
 	&__input {
